--- a/style.css
+++ b/style.css
@@ -9,3 +9,73 @@ body {
     height: 100%;
     width: 100%;
 }
+
+main{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: lightgreen;
+}
+
+#panel{
+    width: 80vw;
+    height: 80vh;
+    background-color: rgb(190, 241, 190);
+    border-radius: 16px;
+    overflow: hidden;
+}
+
+#top{
+    padding: 0 20%;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    background-color: rgb(150, 201, 150);
+}
+
+.elem{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 25px;
+}
+
+.box{
+    padding: 10px 20px;
+    background-color: #fff;
+    border-radius: 16px;
+    color: rgb(150, 201, 150);
+    font-weight: 600;
+    font-size: 30px;
+}
+
+#bottom{
+    width: 100%;
+    height: calc(100% - 100px);
+    padding: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+}
+
+.bubble{
+    width: 50px;
+    height: 50px;
+    background-color: rgb(150, 201, 150);
+    border-radius: 50%;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+}
+
+.bubble:hover{
+    background-color: rgb(100, 151, 100);
+    cursor: pointer;
+}
